syntax = "proto3";

package likes;

option go_package = "likes/protogen/golang";

message CreateReactionRequest {
    string post_id = 1;
    string author_id = 2;
}

message CreateReactionResponse {
    string reaction_id = 1;
}

message GetReactionsRequest {
    string post_id = 1;
    uint64 limit = 2;
    uint64 offset = 3;
};

message GetReactionsResponse {
    repeated Reaction reactions = 1;
}

message Reaction {
    string reaction_id = 1;
}

message DeleteReactionRequest {
    string reaction_id = 1;
    string post_id = 2;
    string author_id = 4;
}

message DeleteReactionResponse {
    string success_message = 1;
}


message GetReactionRequest {
    string reaction_id = 1;
};

message GetReactionResponse {
    string reaction_id = 1;
}

message DeleteReactionsByAuthorRequest {
    string author_id = 1;
}

message DeleteReactionsByAuthorResponse {
    string success_message = 1;
}

message DeleteReactionsByPostRequest {
    string post_id = 1;
}

message DeleteReactionsByPostResponse {
    string success_message = 1;
}